# authentication

./: .claudeignore  .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yaml  main.py  pyproject.toml
.claude/: CLAUDE.md  CONFIG_GUIDE.md  config.json  settings.json
.claude/agents/: security-reviewer.md
.github/workflows/: deploy.yml  test.yml
alembic/: env.py
alembic/versions/: 6769dbea7204_init_tables.py  9e84ae0daea3_init_table.py
app/src/core/: config.py  oauth_config.py  security.py
app/src/crud/: user.py
app/src/database/: session.py
app/src/models/: __init__.py  user.py
app/src/router/auth/v1/google/: api.py
app/src/router/google/: api.py
app/src/router/v1/: api.py
app/src/router/v1/google/: api.py
app/src/router/v1/user/: api.py
app/src/schemas/: user.py
app/src/templates/: index.html
tests/: README.md  conftest.py  factories.py  test_api_google.py  test_api_user.py  test_models.py  test_schemas.py  test_security.py
